example-app/k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: test
spec:
  type: LoadBalancer
  ports:
    - port: 8812
      targetPort: 8081
      protocol: TCP
  selector:
    app: example-app
